--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -1,18 +1,40 @@
-<h1>Add Account Type</h1>
-<form [formGroup]="accountTypeForm">
-    <input type = "text" 
-          name = "name" 
-          placeholder = "Account Name" 
-          formControlName="name" >
-    <br/>
-    <input type = "text" 
-          name = "description" 
-          placeholder = "description" 
-          formControlName="description" >
-    <br/>
-    <input type = "submit" 
-            value = "submit" 
-            (click) = "onClickSubmit()" >
-  </form>
-
-  
+<div class="row">
+      <div class="col-9 mt-4">
+            <h3>Account Types</h3>
+            <hr>
+            <table class="table table-striped table-dark">
+                  <thead>
+                        <tr>
+                              <th scope="col">#</th>
+                              <th scope="col">Account Type Name</th>
+                              <th scope="col">Description</th>
+                              <th scope="col">Actions</th>
+                        </tr>
+                  </thead>
+                  <tbody>
+                        <tr *ngFor="let accountType of accountTypes; let i = index">
+                              <th scope="row">{{i + 1}}</th>
+                              <td>{{accountType.name}}</td>
+                              <td>{{accountType.description}}</td>
+                              <td><button class="btn btn-danger btn-sm" type="button">Delete</button></td>
+                        </tr>
+                        <tr>
+                  </tbody>
+            </table>
+      </div>
+      <div class="col-3 mt-4">
+            <h3>Add Account Type</h3>
+            <hr>
+            <form [formGroup]="accountTypeForm">
+                  <div class="form-group">
+                        <label>Account Type Name</label>
+                        <input type="text" name="name" class="form-control" formControlName="name">
+                  </div>
+                  <div class="form-group">
+                        <label>Account Type Description</label>
+                        <input type="text" name="description" class="form-control" formControlName="description">
+                  </div>
+                  <input type="submit" value="submit" class="btn btn-primary btn-block" (click)="onClickSubmit()">
+            </form>
+      </div>
+</div>
