Modified category type from number to string

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -17,7 +17,7 @@
                               <th scope="row">{{i + 1}}</th>
                               <td>{{category.name}}</td>
                               <td>{{category.description}}</td>
-                              <td><span *ngIf="category.type == 1">Income</span><span *ngIf="category.type == 2">Expense</span></td>
+                              <td>{{category.type}}</td>
                               <td><button class="btn btn-danger btn-sm" type="button">Delete</button></td>
                         </tr>
                         <tr>
@@ -39,8 +39,8 @@
                   <div class="form-group">
                         <select formControlName="type" name="type"  class="form-control">
                               <option value="">Select Type</option>
-                              <option value="1">Income</option>
-                              <option value="2">Expense</option>
+                              <option value="income">Income</option>
+                              <option value="expense">Expense</option>
                         </select>
                   </div>
                   <input type="submit" value="submit" class="btn btn-primary btn-block"  (click)="onClickSubmit()">
