--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -25,7 +25,7 @@
             </table>
       </div>
       <div class="col-3 mt-4">
-            <h3>Add Account Type</h3>
+            <h3>Add Category</h3>
             <hr>
             <form [formGroup]="categoryForm">
                   <div class="form-group">
@@ -37,13 +37,35 @@
                         <input type="text" name="description" class="form-control" formControlName="description">
                   </div>
                   <div class="form-group">
-                        <select formControlName="type" name="type"  class="form-control">
+                        <label for="type">Category Type</label>
+                        <select formControlName="type" name="type" class="form-control" id="type">
                               <option value="">Select Type</option>
                               <option value="income">Income</option>
                               <option value="expense">Expense</option>
                         </select>
                   </div>
                   <input type="submit" value="submit" class="btn btn-primary btn-block"  (click)="onClickSubmit()">
+            </form>
+
+            <h3>Add Sub Category</h3>
+            <hr>
+            <form [formGroup]="subCategoryForm">
+                  <div class="form-group">
+                        <label for="category">Category Type</label>
+                        <select formControlName="category" name="category" class="form-control" id="category">
+                              <option value="">Select Parent Category</option>
+                              <option *ngFor="let category of categories" [value]="category._id">{{category.name}}</option>
+                        </select>
+                  </div>
+                  <div class="form-group">
+                        <label>Category Name</label>
+                        <input type="text" name="name" class="form-control" formControlName="name">
+                  </div>
+                  <div class="form-group">
+                        <label>Description</label>
+                        <input type="text" name="description" class="form-control" formControlName="description">
+                  </div>                  
+                  <input type="submit" value="submit" class="btn btn-primary btn-block"  (click)="saveSubCategory()">
             </form>
       </div>
 </div>
